objects/EXPRN__Alert_Monitored_Set__c.object
<CustomObject>
    <description>Junction object between Alert Monitored Set Name and Account</description>
    <fields>
        <fullName>EXPRN__AMS_Account_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>AMS Account Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Experian Alert Monitored Sets</relationshipLabel>
        <relationshipName>Alert_Monitored_Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Alert_Monitored_Set_Name__c</fullName>
        <label>Alert Monitored Set Name</label>
        <referenceTo>EXPRN__Alert_Monitored_Set_Name__c</referenceTo>
        <relationshipName>Alert_Monitored_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Experian Alert Monitored Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Alert Monitored Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>